[css-grid] WPT test css/css-grid/grid-model/grid-box-sizing-001.html fails https://bugs.webkit.org/show_bug.cgi?id=204578

Patch by Ziran Sun <zsun@igalia.com> on 2021-02-03
Reviewed by Javier Fernandez.

LayoutTests/imported/w3c:

All test cases in grid-box-sizing-001.html should pass now due to this change.

* web-platform-tests/css/css-grid/grid-model/grid-box-sizing-001-expected.txt:

Source/WebCore:

For a positioned element that specified both top/bottom should be treated as though
it has a height explicitly specified. Check on this case is missing in
RenderGrid::layoutBlock. This change adds check on hasDefiniteLogicalHeight() and make
sure we have a specific value of logical-height for the positioned elment that has
both top/bottom specified.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutBlock):

Canonical link: https://commits.webkit.org/233633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272302 268f45cc-cd09-0410-ab3c-d52691b4dbfc